--- a/Jorge.DataAccess/Jorge.DataAccess.csproj
+++ b/Jorge.DataAccess/Jorge.DataAccess.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,11 +13,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0-rc.2.23509.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jorge.DataAccess\Jorge.DataAccess.csproj" />
     <ProjectReference Include="..\Jorge.Models\Jorge.Models.csproj" />
     <ProjectReference Include="..\Jorge.Utility\Jorge.Utility.csproj" />
   </ItemGroup>
