--- a/JorgeWeb/JorgeBookWeb.csproj
+++ b/JorgeWeb/JorgeBookWeb.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Jorge.Models\JorgeBook.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
