--- a/Jorge.DataAccess/JorgeBook.DataAccess.csproj
+++ b/Jorge.DataAccess/JorgeBook.DataAccess.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Jorge.Models\JorgeBook.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
