Se termina la pagina de Home y detalles de los libros

--- a/JorgeWeb/appsettings.json
+++ b/JorgeWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;DataBase=Jorge;Integrated Security=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.;DataBase=Jorge;Integrated Security=True;TrustServerCertificate=true",
   }
 }
